src/components/app/bottom-bar/bottom-bar.css
.bar {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
  font-size: 16px;
}

.button {
  padding: 8px 24px;
  min-width: 5em;
  outline: 2.25px solid var(--toner);
  outline-offset: -2.25px;
}

@media (pointer: coarse) and (max-width: 768px) {
  .button {
    min-width: auto;
    width: 100%;
    flex-grow: 1;
  }
}

